# ai-spike-evaluation-metrics

./: .gitignore  README.md  analyse-metrics.ipynb  calculate-metrics.ipynb  evaluation-metrics.ipynb  experiment-writeup.md  pyproject.toml  qanda-metrics.ipynb  summarisation-metrics.ipynb
