[project]
name = "pythonproject"
version = "0.1.0"
description = "Python project with OCR capabilities using Claude 3.5 Sonnet and GPT-4o"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=3.0.0",
    "requests>=2.31.0",
    "pypi-json>=0.4.0",
    "deepeval>=3.8.4",
    "huggingface-hub[cli]>=1.4.1",
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "taskipy>=1.14.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ipykernel>=7.1.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "output*"]

[tool.taskipy.tasks]
create-kernel = "ipython kernel install --user --env VIRTUAL_ENV $(pwd)/.venv --name=ai-spike-evaluation-metrics"
