[project]
name = "pythonproject"
version = "0.1.0"
description = "Python project with OCR capabilities using Claude 3.5 Sonnet and GPT-4o"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "ipykernel>=7.1.0",
    "jupyter>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=3.0.0",
    "requests>=2.31.0",
    "pypi-json>=0.4.0",
    "deepeval>=3.8.4",
    "huggingface-hub[cli]>=1.4.1",
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "taskipy>=1.14.1",
    "aiobotocore>=3.1.3",
    "scikit-learn>=1.8.0",
    "bert-score>=0.3.13",
    "pydantic-evals>=1.60.0",
    "ragas>=0.4.3",
    "langchain>=1.2.10",
    "aws>=0.2.5",
    "langchain-aws>=1.2.5",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ipykernel>=7.1.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "output*"]

[tool.taskipy.tasks]
create-kernel = "ipython kernel install --user --env VIRTUAL_ENV $(pwd)/.venv --name=ai-spike-evaluation-metrics"
